--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-certifi=2020.12.5=py36haa95532_0
+certifi=2020.12.5#=py36haa95532_0
 click=7.1.2=pypi_0
 flask=1.1.2=pypi_0
 flask-cors=3.0.10=pypi_0
