--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,19 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-certifi=2020.12.5#=py36haa95532_0
-click=7.1.2=pypi_0
-flask=1.1.2=pypi_0
-flask-cors=3.0.10=pypi_0
-itsdangerous=1.1.0=pypi_0
-jinja2=2.11.2=pypi_0
-joblib=1.0.0=pypi_0
-markupsafe=1.1.1=pypi_0
-numpy=1.19.5=pypi_0
-pandas=1.1.5=pypi_0
-pip=20.3.3=py36haa95532_0
-python=3.6.12=h5500b2f_2
-python-dateutil=2.8.1=pypi_0
-pytz=2020.5=pypi_0
-scikit-learn=0.24.0=pypi_0
-scipy=1.5.4=pypi_0
-setuptools=51.1.2=py36haa95532_4
-six=1.15.0=pypi_0
-sklearn=0.0=pypi_0
-sqlite=3.33.0=h2a8f88b_0
-threadpoolctl=2.1.0=pypi_0
-vc=14.2=h21ff451_1
-vs2015_runtime=14.27.29016=h5e58377_2
-werkzeug=1.0.1=pypi_0
-wheel=0.36.2=pyhd3eb1b0_0
-wincertstore=0.2=py36h7fe50ca_0
-zlib=1.2.11=h62dcd97_4
+certifi==2020.12.5
+click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==1.0.0
+MarkupSafe==1.1.1
+numpy==1.19.5
+pandas==1.1.5
+python-dateutil==2.8.1
+pytz==2020.5
+scikit-learn==0.24.0
+scipy==1.5.4
+six==1.15.0
+sklearn==0.0
+threadpoolctl==2.1.0
+Werkzeug==1.0.1
+wincertstore==0.2
